--- a/04_Challenges/cv-styling-master/public/style1/index.html
+++ b/04_Challenges/cv-styling-master/public/style1/index.html
@@ -11,6 +11,7 @@
   <title>JStudent | CV</title>
   
   <!-- Stylesheets -->
+  <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="normalize.css">
   <!-- /Stylesheets -->
 
